--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -24,44 +24,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#eee"
                 android:orientation="vertical" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:onClick="toggleMenu"
-                        android:text="切换菜单" />
-
-                    <LinearLayout
-                        android:id="@+id/title"
-                        android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:background="@drawable/title_bar"
-                        android:gravity="center_horizontal|center_vertical" >
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="title"
-                            android:textColor="#ffffff"
-                            android:textSize="20sp" />
-                    </LinearLayout>
-                </LinearLayout>
+                	<include layout="@layout/activity_main_menu"/>
             </LinearLayout>
+            
         </LinearLayout>
     </com.ylczjqnfc.utils.viewTools.SlidingMenu>
 
-    <android.support.v4.view.ViewPager   
+    <!-- <android.support.v4.view.ViewPager   
         android:id="@+id/viewpager"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center" >
-    </android.support.v4.view.ViewPager>
+    </android.support.v4.view.ViewPager> -->
 
 </RelativeLayout>
